--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   flutter_staggered_grid_view: "^0.2.5"
   curved_navigation_bar: ^0.3.1
   http: ^0.12.0+4
+  flutter_datetime_picker: ^1.3.4
 
 dev_dependencies:
   flutter_test:
@@ -59,6 +60,8 @@ flutter:
     - assets/Formation.png
     - assets/personInfo.png
     - assets/Skills.png
+    - assets/TempletsEx.jpg
+    - assets/Education.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
