--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -39,8 +39,8 @@ android {
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId "com.example.second_app"
-        minSdkVersion 21
-        multiDexEnabled true
+        minSdkVersion 16
+        // multiDexEnabled true
         targetSdkVersion 28
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
