--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   flutter_datetime_picker: ^1.3.4
   smooth_star_rating: 1.0.4+2
   rflutter_alert: ^1.0.3
+  flutter_slidable: "^0.4.7"
+  image_picker: ^0.6.3+1
 
 dev_dependencies:
   flutter_test:
@@ -61,10 +63,13 @@ flutter:
     - assets/Competences.png
     - assets/Formation.png
     - assets/personInfo.png
-    
+    - assets/Cvbackground.jpg
+    - assets/logo.png
     - assets/TempletsEx.jpg
     - assets/Education.png
     - assets/skills.png
+    - assets/fblogin.png
+    - assets/GGLogin.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
