--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   rflutter_alert: ^1.0.3
   flutter_slidable: "^0.4.7"
   image_picker: ^0.6.3+1
+  flutter_xlider: ^3.0.1
+  flutter_circular_chart: ^0.1.0
 
 dev_dependencies:
   flutter_test:
